# watchtv

./: .gitignore  README.md  dev.leeb.WatchTV.json  meson.build
data/: dev.leeb.WatchTV.desktop.in  dev.leeb.WatchTV.gschema.xml  dev.leeb.WatchTV.metainfo.xml.in  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: channels.py  gstflags.py  main.py  meson.build  preferences.py  settings.py  test.ui  tvhapi.py  videosize.py  watchtv.gresource.xml  watchtv.in  window.css  window.py  window.ui
src/gtk/: help-overlay.ui
